--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /.idea
 /1-Webpack4BoilerPlate/node_modules
 /2-ReactBolierplate/node_modules
+/1-Webpack4BoilerPlate/yarn.lock
+/2-ReactBolierplate/.eslintcache
+/2-ReactBolierplate/yarn.lock
