add 4-Gulp4Bolierplate add CircleGeometry add PrimitiveAPI/CircleGeometry

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@
 /1-Webpack4BoilerPlate/yarn.lock
 /2-ReactBolierplate/.eslintcache
 /2-ReactBolierplate/yarn.lock
+/4-Gulp4Bolierplate/node_modules
+/4-Gulp4Bolierplate/tmp
+/4-Gulp4Bolierplate/app.js
+/4-Gulp4Bolierplate/app.js.map
+/4-Gulp4Bolierplate/yarn.lock
