--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /4-Gulp4Bolierplate/app.js
 /4-Gulp4Bolierplate/app.js.map
 /4-Gulp4Bolierplate/yarn.lock
+/2-ReactBolierplate/.idea
+/ImageryLayer/.idea
