--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,15 @@
 /4-Gulp4Bolierplate/yarn.lock
 /2-ReactBolierplate/.idea
 /ImageryLayer/.idea
+/2-Resium/node_modules
+/2-Resium/.idea
+/Mixins/Inspector/.idea/Inspector.iml
+/Mixins/Inspector/.idea/misc.xml
+/Mixins/Inspector/.idea/modules.xml
+/Mixins/Inspector/.idea/vcs.xml
+/Mixins/Inspector/.idea/workspace.xml
+/Mixins/LatlonInspectorMixin/.idea/LatlonInspectorMixin.iml
+/Mixins/LatlonInspectorMixin/.idea/misc.xml
+/Mixins/LatlonInspectorMixin/.idea/modules.xml
+/Mixins/LatlonInspectorMixin/.idea/vcs.xml
+/Mixins/LatlonInspectorMixin/.idea/workspace.xml
