--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 /Mixins/LatlonInspectorMixin/.idea/modules.xml
 /Mixins/LatlonInspectorMixin/.idea/vcs.xml
 /Mixins/LatlonInspectorMixin/.idea/workspace.xml
+/4-ViteBoilerPlate/node_modules
